--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.29.0",
     "del": "6.1.1",
     "gulp": "^4.0.2",
+    "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.3.0",
     "gulp-debug": "^4.0.0",
     "gulp-file-include": "^2.3.0",
